scm-core => improve ExternalServiceProvider base on camel